--- a/payloads/Kexts/Plists/AppleGraphicsDevicePolicy/Info.plist
+++ b/payloads/Kexts/Plists/AppleGraphicsDevicePolicy/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleGetInfoString</key>
 	<string>AGDP-Override</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.pyquick.AGDP-Override</string>
+	<string>com.hackdoc.AGDP-Override</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -160,7 +160,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>11.3</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © Pyquick</string>
+	<string>Copyright © Hackdoc</string>
 	<key>#OSBundleLibraries</key>
 	<dict>
 		<key>com.apple.driver.AppleGraphicsDevicePolicy</key>
