--- a/payloads/Kexts/Plists/AppleGraphicsPowerManagement/Info.plist
+++ b/payloads/Kexts/Plists/AppleGraphicsPowerManagement/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleGetInfoString</key>
 	<string>AGPM-Override</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.pyquick.AGPM-Override</string>
+	<string>com.hackdoc.AGPM-Override</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -8605,7 +8605,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>11.3</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © Pyquick</string>
+	<string>Copyright © Hackdoc</string>
 	<key>#OSBundleLibraries</key>
 	<dict>
 		<key>com.apple.AppleGraphicsDeviceControl</key>
