--- a/payloads/Kexts/Plists/AppleMuxControl/Info.plist
+++ b/payloads/Kexts/Plists/AppleMuxControl/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleGetInfoString</key>
 	<string>AMC-Override</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.pyquick.AMC-Override</string>
+	<string>com.hackdoc.AMC-Override</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -366,7 +366,7 @@
 		</dict>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © Pyquick</string>
+	<string>Copyright © Hackdoc</string>
 	<key>#OSBundleLibraries</key>
 	<dict>
 		<key>com.apple.driver.AppleMuxControl</key>
