--- a/payloads/Launch Services/com.hackdoc.oclp-r.macos-update.plist
+++ b/payloads/Launch Services/com.hackdoc.oclp-r.macos-update.plist
@@ -4,18 +4,18 @@
 <dict>
 	<key>AssociatedBundleIdentifiers</key>
 	<array>
-		<string>com.pyquick.oclp-r</string>
+		<string>com.hackdoc.oclp-r</string>
 	</array>
 	<key>Label</key>
-	<string>com.pyquick.oclp-r.os-caching</string>
+	<string>com.hackdoc.oclp-r.macos-update</string>
 	<key>ProgramArguments</key>
 	<array>
-		<string>/Library/Application Support/Pyquick/OCLP-R.app/Contents/MacOS/OCLP-R</string>
-		<string>--cache_os</string>
+		<string>/Library/Application Support/Hackdoc/OCLP-R.app/Contents/MacOS/OCLP-R</string>
+		<string>--prepare_for_update</string>
 	</array>
 	<key>WatchPaths</key>
 	<array>
-		<string>/System/Volumes/Update/Preflight.plist</string>
+		<string>/System/Volumes/Update/Update.plist</string>
 	</array>
 </dict>
 </plist>
