--- a/payloads/Tools/OCLP-R.app/Contents/Info.plist
+++ b/payloads/Tools/OCLP-R.app/Contents/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string>OC-Patcher.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.pyquick.oclp-r-helper</string>
+	<string>com.hackdoc.oclp-r-helper</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -21,7 +21,7 @@
 	<key>NSHighResolutionCapable</key>
 	<true/>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2020-2023 Pyquick</string>
+	<string>Copyright © 2020-2025 Hackdoc</string>
 	<key>LSUIElement</key>
 	<true/>
 </dict>
