--- a/payloads/Tools/OCLP-R.app/Contents/Info.plist
+++ b/payloads/Tools/OCLP-R.app/Contents/Info.plist
@@ -21,7 +21,7 @@
 	<key>NSHighResolutionCapable</key>
 	<true/>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2020-2025 sumitduster</string>
+	<string>Copyright © 2020-2025 Sumit Duster</string>
 	<key>LSUIElement</key>
 	<true/>
 </dict>
