--- a/payloads/Kexts/Plists/AppleUSBMaps/Info.plist
+++ b/payloads/Kexts/Plists/AppleUSBMaps/Info.plist
@@ -10648,7 +10648,7 @@
 		</dict>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © Hackdoc</string>
+	<string>Copyright © sumitduster</string>
 	<key>OSBundleRequired</key>
 	<string>Root</string>
 </dict>
